force-app/main/default/objects/Opportunity_Internal_Team__c/Opportunity_Internal_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object to track Houlihan Lokey employees that participate as team members for a prospective engagement.</description>
    <label>Opportunity Internal Team</label>
    <nameField>
        <displayFormat>OIT-{000000}</displayFormat>
        <label>Internal Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Internal Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>