force-app/main/default/objects/Opportunity_Internal_Team__c/fields/Active_on_Opp__c.field-meta.xml
<CustomField>
    <fullName>Active_on_Opp__c</fullName>
    <formula>OR(
ISBLANK( End_Date__c ),
AND(
NOT( ISBLANK( End_Date__c )),
TODAY() &lt; End_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active on Opp?</label>
    <type>Checkbox</type>
</CustomField>