force-app/main/default/objects/Opportunity_Internal_Team__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact__r.Contact_Full_Name__c</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>