force-app/main/default/objects/Opportunity_Internal_Team__c/fields/Invalid_Office_LOB__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Office_LOB__c</fullName>
    <formula>IF( 
AND(	
OR(TEXT(Contact__r.Line_of_Business__c) != LOB__c, 
TEXT( Contact__r.Office__c ) != Office__c 
), 
AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt; TODAY()), 
AND(NOT(TEXT(Opportunity__r.Stage__c)=&apos;Dead&apos;), NOT(TEXT(Opportunity__r.Stage__c)=&apos;Lost&apos;), NOT(TEXT(Opportunity__r.Stage__c)=&apos;Engaged&apos;)) 
) 

, 
&apos;true&apos; 
, 
&apos;false&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invalid Office/LOB?</label>
    <type>Text</type>
</CustomField>