force-app/main/default/objects/Opportunity_Internal_Team__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Houlihan Employee&apos;s office when added to Internal Team</description>
    <label>Office</label>
    <length>2</length>
    <type>Text</type>
</CustomField>