force-app/main/default/objects/Opportunity_Internal_Team__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>HL Team</relationshipLabel>
    <relationshipName>Opportunity_Internal_Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>