force-app/main/default/objects/Opportunity_Internal_Team__c/fields/Role_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Display_Name__c</fullName>
    <formula>Staff_Role__r.Display_Name__c</formula>
    <label>Role Display Name</label>
    <type>Text</type>
</CustomField>