force-app/main/default/objects/Opportunity_Internal_Team__c/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>IF( (Contact__r.Registered__c = TRUE), 


HYPERLINK(&quot;/&quot; &amp; Id , Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName, &quot;_self&quot;), 

HYPERLINK(&quot;/&quot; &amp; Id , Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName &amp; &quot;* (NON-REGISTERED)&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Details</label>
    <type>Text</type>
</CustomField>