force-app/main/default/objects/Opportunity_Internal_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Staff_Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Number__c</field>
        <operation>equals</operation>
        <value>76535</value>
    </filters>
    <label>All</label>
</ListView>