force-app/main/default/objects/Opportunity_Internal_Team__c/listViews/All_By_Specific_Opportunity.listView-meta.xml
<ListView>
    <fullName>All_By_Specific_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Staff_Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Office__c</columns>
    <columns>LOB__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contact_Name__c</columns>
    <columns>Registered__c</columns>
    <columns>Revenue_Allocation__c</columns>
    <columns>Role__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Number__c</field>
        <operation>equals</operation>
        <value>112193</value>
    </filters>
    <label>All - By Specific Opportunity</label>
</ListView>